# polars-sharing-materials

./: README.md  pyproject.toml  slides.md
notebooks/: example.ipynb
